k8s-cluster-configuration/applications/md/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: md
  labels:
    app: md
spec:
  replicas: 1
  selector:
    matchLabels:
      app: md
  template:
    metadata:
      labels:
        app: md
      annotations:
        txtwrite.k6nis.dev/image-sha: "4a4ba6652cd52c8743e9b7eb40aa416e392e9742"
    spec:
      containers:
      - name: md
        image: registry.k6nis.dev/txtwrite/neon:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4173
