k8s-cluster-configuration/applications/md/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: md-service
spec:
  selector:
    app: md
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4173
