k8s-cluster-configuration/applications/md/base/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: md-gateway
  namespace: md
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "md.k6nis.dev"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: md.k6nis.dev
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: md-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: md
  namespace: md
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: md-gateway
      namespace: md
  hostnames:
    - md.k6nis.dev
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: md-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
